[metadata]
author = 'Copeland Carter'
author_email = 'smartycope@gmail.com'
license = 'MIT'
url = 'https://github.com/smartycope/ezregex'

[build-system]
requires = ["hatchling", 'setuptools', 'wheel']
build-backend = "hatchling.build"

[requires]
python_version = ['3.10', '3.11', '3.12', 'pypy', 'pypy3']

[tool.hatch.commands]
prerelease = 'hatch build'

[project]
name = 'ezregex'
version = '1.9.2'
description = 'A readable and intuitive way to generate Regular Expressions'
dependencies = []
readme = "README.md"
requires-python = ">=3.10"
